--- a/home/.tmux/tmux-default.conf
+++ b/home/.tmux/tmux-default.conf
@@ -1,3 +1,5 @@
+# Tmux getting started: https://github.com/tmux/tmux/wiki/Getting-Started
+
 # set shell
 set -g default-shell /usr/local/bin/zsh
 
@@ -12,7 +14,7 @@ set -g history-limit 10000
 # urxvt tab like window switching (-n: no prior escape seq)
 bind C-w new-window
 bind C-k confirm-before -p "kill-window #W? (y/n)" kill-window
-bind C-c choose-session
+bind C-c choose-tree
 bind C-r command-prompt 'rename-window %%'
 bind C-t command-prompt 'rename-session %%'
 bind c-p prev
@@ -44,7 +46,7 @@ set -g status-right-length 120
 set -g status-left-length 40
 #set -g status-right '#(date "+%Y/%m/%d %H:%M:%S")#[fg=white]'
 set -g status-right "#[fg=cyan,bg=black]MEM/CPU#[fg=white,bg=black] #(tmux-mem-cpu-load -a0) #[fg=cyan,bg=black]IP #[fg=white,bg=black]#(ifconfig en0 inet | sed -e '1d' -e 's/^.*inet //' -e 's/ netmask.*$//') #[fg=cyan,bg=black]DATE #[fg=white,bg=black]#(date '+%Y/%m/%d %H:%M')"
-set -g status-left '#[fg=cyan,bg=black]@#[fg=white,bg=black]#{host_short} #[fg=cyan,bg=black]WINDOW #[fg=white,bg=black]#S #[fg=cyan,bg=black]PANE '
+set -g status-left '#[fg=cyan,bg=black]@#[fg=white,bg=black]#{host_short} #[fg=cyan,bg=black]SESSION #[fg=white,bg=black]#S #[fg=cyan,bg=black]WINDOW '
 
 # set message
 set -g display-time 5000
@@ -83,7 +85,9 @@ set -s escape-time 0
 # pane border の設定
 
 # ペインボーダーの色を設定する
-set -g pane-active-border-style fg=colour246,bg=colour240
-set -g pane-border-style        fg=colour236,bg=colour236
+#set -g pane-active-border-style fg=colour246,bg=colour240
+#set -g pane-border-style        fg=colour236,bg=colour236
+set -g pane-active-border-style fg=cyan
+set -g pane-border-style        fg=colour236
 # アクティブなペインを目立たせる
 # set -g pane-border-format "Here"
