--- a/home/.tmux/tmux-default.conf
+++ b/home/.tmux/tmux-default.conf
@@ -34,7 +34,7 @@ bind C-q source-file ~/.tmux/tmux-default.conf; display-message "Reloaded ~/.tmu
 # copy mode
 bind C-v copy-mode
 bind-key    -T copy-mode-vi v     send-keys -X begin-selection
-bind-key    -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "xclip -i -selection clipboard"
+bind-key    -T copy-mode-vi y     send-keys -X copy-pipe "xclip -i -selection clipboard"
 bind p run "xclip -o -selection clipboard | tmux load-buffer - && tmux paste-buffer"
 
 # status line
