--- a/home/.tmux/tmux-default.conf
+++ b/home/.tmux/tmux-default.conf
@@ -1,7 +1,7 @@
 # Tmux getting started: https://github.com/tmux/tmux/wiki/Getting-Started
 
 # set shell
-set -g default-shell /usr/local/bin/zsh
+#set -g default-shell /usr/local/bin/zsh
 
 # vi keybind
 set -g status-keys vi
@@ -39,9 +39,7 @@ bind p run "xclip -o -selection clipboard | tmux load-buffer - && tmux paste-buf
 
 # status line
 set -g status-interval 1
-set -g status-bg black
-set -g status-fg white
-set -g status-attr bold
+set -g status-style fg=white,bg=black
 set -g status-right-length 120
 set -g status-left-length 40
 #set -g status-right '#(date "+%Y/%m/%d %H:%M:%S")#[fg=white]'
@@ -50,20 +48,15 @@ set -g status-left '#[fg=cyan,bg=black]@#[fg=white,bg=black]#{host_short} #[fg=c
 
 # set message
 set -g display-time 5000
-set -g message-attr bold,dim
-set -g message-fg yellow
-set -g message-bg black
+set -g message-style fg=yellow,bg=black,bold,dim
 
 # window setting
-setw -g utf8 on
 setw -g window-status-style         fg=white,bg=colour236
 setw -g window-status-current-style fg=colour232,bg=cyan
 # see whether active
 setw -g monitor-activity on
 set -g visual-activity on
-setw -g window-status-activity-attr bold
-setw -g window-status-activity-fg white
-setw -g window-status-activity-bg red
+setw -g window-status-activity-style fg=white,bg=red,bold
 setw -g window-status-format '[#F]#I #W'
 setw -g window-status-current-format '[#F]#I #W'
 #setw -g automatic-rename on
@@ -89,5 +82,7 @@ set -s escape-time 0
 #set -g pane-border-style        fg=colour236,bg=colour236
 set -g pane-active-border-style fg=cyan
 set -g pane-border-style        fg=colour236
+set -g pane-border-indicators   arrows
+set -g pane-border-lines        single
 # アクティブなペインを目立たせる
-# set -g pane-border-format "Here"
+#set -g pane-border-format "Here"
