Update pane config

--- a/home/.tmux/tmux-default.conf
+++ b/home/.tmux/tmux-default.conf
@@ -74,15 +74,24 @@ set -g mouse on
 # evil for emacs
 set -s escape-time 0
 
-
 # pane border の設定
-
-# ペインボーダーの色を設定する
+## ペインボーダーの色を設定する
 #set -g pane-active-border-style fg=colour246,bg=colour240
 #set -g pane-border-style        fg=colour236,bg=colour236
-set -g pane-active-border-style fg=cyan
-set -g pane-border-style        fg=colour236
+set -g pane-active-border-style fg=cyan,bg=colour234
+set -g pane-border-style        fg=colour238,bg=colour234
 set -g pane-border-indicators   arrows
 set -g pane-border-lines        single
-# アクティブなペインを目立たせる
+## アクティブなペインを目立たせる
 #set -g pane-border-format "Here"
+
+# paneの設定
+## フォーカスしているペイン
+setw -g window-active-style bg=colour234
+##フォーカスしていないペインの設定
+setw -g window-style bg=colour235
+
+# Copy mode highlight (default: yellow)
+set -g mode-style "fg=default,bg=default,reverse"
+
+
